# lantern_rs

./: Cargo.toml  README.md
__example__/src/: a.ts  b.ts  d.ts  e.ts
crates/lantern_cli/: Cargo.toml
crates/lantern_cli/fixtures/unused_deep_chain/: a.ts
crates/lantern_cli/fixtures/unused_simple_named/: index.ts
crates/lantern_cli/fixtures/unused_simple_named_transitive/: a.ts
crates/lantern_cli/fixtures/used_deep_chain/: c.ts  f.ts  index.ts
crates/lantern_cli/fixtures/used_default_export/: a.ts  index.ts
crates/lantern_cli/fixtures/used_export_star/: b.ts
crates/lantern_cli/fixtures/used_import_as/: index.ts
crates/lantern_cli/fixtures/used_named_as_transitive/: a.ts  index.ts
crates/lantern_cli/src/: main.rs
crates/lantern_cli/src/commands/: affected.rs  analyze.rs  cycles.rs  depgraph.rs  files_with_reexports.rs  mod.rs  unused_exports.rs
crates/lantern_cli/src/commands/unused_exports/: command.rs  find_unused_exports.rs  mod.rs
crates/lantern_cli/src/commands/unused_exports/tests/: mod.rs  unused_exports.rs  used_exports.rs
crates/lantern_code_annotation/: Cargo.toml
crates/lantern_code_annotation/src/: lib.rs
crates/lantern_core/: Cargo.toml
crates/lantern_core/fixtures/: imports.ts
crates/lantern_core/src/: lib.rs
crates/lantern_core/tests/: exports.rs  imports.rs
crates/lantern_dependency_graph/: Cargo.toml
crates/lantern_dependency_graph/src/: lib.rs
crates/lantern_files_with_reexports/: Cargo.toml
crates/lantern_files_with_reexports/src/: lib.rs
crates/lantern_files_with_reexports/tests/: used_exports.rs
crates/lantern_formatters/: Cargo.toml
crates/lantern_parse_ts/: Cargo.toml
crates/lantern_parse_ts/fixtures/: simple.ts  simple.tsx
crates/lantern_parse_ts/src/: lib.rs
crates/lantern_resolver/: Cargo.toml
crates/lantern_resolver/src/: lib.rs
crates/lantern_symbols_map/: Cargo.toml
crates/lantern_symbols_map/fixtures/: exports_all.ts  exports_decl.ts  exports_decl_arrow_function.ts  exports_decl_enum.ts  exports_decl_interface.ts  exports_decl_type_union.ts  exports_decl_var.ts  exports_default_interface_decl.ts  exports_named.ts  exports_named_aliased.ts  exports_named_default.ts  exports_named_multiple.ts  imports.ts  imports_declaration_specifier_as.ts  imports_mixed_declaration_specifier_as_and_type.ts  imports_named.ts  imports_namespace_specifier.ts  imports_namespace_type_specifier.ts  imports_type.ts  imports_type_external_package.ts  imports_type_inside_declaration.ts  package.json  pnpm-lock.yaml
crates/lantern_symbols_map/src/: lib.rs  module.rs  symbol.rs  symbols_map.rs
crates/lantern_symbols_map/tests/: exports.rs  get_line_number_from_span.rs  imports.rs
crates/lantern_testing/: Cargo.toml
crates/lantern_testing/src/: lib.rs
crates/lantern_unused_exports/: Cargo.toml
crates/lantern_unused_exports/fixtures/unused_default_export/: a.ts
crates/lantern_unused_exports/fixtures/used_deep_chain/: a.ts  b.ts  d.ts  e.ts
crates/lantern_unused_exports/fixtures/used_export_star/: index.ts
crates/lantern_unused_exports/fixtures/used_simple_named_transitive/: a.ts  index.ts
crates/lantern_unused_exports/src/: lib.rs
crates/lantern_unused_exports/tests/: unused_exports.rs  used_exports.rs
(+4 files in other folders)
