[workspace]
members = [
  "crates/lantern_cli",
  "crates/lantern_code_annotation",
  "crates/lantern_dependency_graph",
  "crates/lantern_parse_ts",
  "crates/lantern_resolver",
  "crates/lantern_symbols_map",
  "crates/lantern_testing", 
  "crates/lantern_unused_exports",
  "crates/lantern_files_with_reexports",
]

resolver = "2"

