[package]
name = "lantern_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"

clap = { version = "4.4.1", features = ["cargo"] }

lantern_symbols_map = { path = "../lantern_symbols_map" }
lantern_code_annotation = { path = "../lantern_code_annotation" }
