[package]
name = "lantern_parse_ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"

oxc_allocator = "0.29.0"
oxc_ast = "0.29.0"
oxc_parser = "0.29.0"
oxc_span = "0.29.0"

lantern_testing = { path = "../lantern_testing" }
