[package]
name = "lantern_symbols_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"

oxc_allocator = "0.12.1"
oxc_ast = "0.12.1"
oxc_span = "0.12.1"

lantern_parse_ts = { path = "../lantern_parse_ts" }
lantern_resolver = { path = "../lantern_resolver" }
lantern_testing = { path = "../lantern_testing" }
lantern_code_annotation = { path = "../lantern_code_annotation" }
