[package]
name = "lantern_unused_exports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"

lantern_dependency_graph = { path = "../lantern_dependency_graph" }
lantern_symbols_map = { path = "../lantern_symbols_map" }
lantern_testing = { path = "../lantern_testing" }
